--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,46 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
+# See https://github.com/github/gitignore/blob/main/Node.gitignore
+# and https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
+
+# === Node & React ===
+node_modules/
+build/
+dist/
+.env
+.env.* # e.g., .env.local, .env.development
+.npmrc
+package-lock.json
+yarn.lock
+.pnp.*
+.pnp
+
+# === Optional: cache and logs ===
+.cache/
+.cache-loader/
+.vite/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# === VS Code ===
 .vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+.history/
+*.code-workspace
+
+# === MacOS/Linux system files ===
+.DS_Store
+Thumbs.db
+
+# === Testing ===
+coverage/
+*.lcov
+
+# === IDE specific ===
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# === Misc ===
+*.tgz
+*.tar.gz
